fixed posts not showing cursor when hovering over them

--- a/public/css/communities.css
+++ b/public/css/communities.css
@@ -8,6 +8,10 @@
   transition: all 0.3s cubic-bezier(.25,.8,.25,1); 
 }
 
+.post:hover {
+  cursor: pointer;
+}
+
 .link {
   color: #0e6655;
   padding-top: 1px;
